Fixed visibility of facet search bars

--- a/app/components/faceted-search/style.scss
+++ b/app/components/faceted-search/style.scss
@@ -11,14 +11,31 @@
           align-items: center;
           justify-content: center;
           border-radius: 2px ;
-  }
+    }
 }
 
 .ember-power-select-trigger {
-    background-color: #ccc ;
-    border-width: 0 ;
+    background-color: #f5f5f5;
+    border-width: 1px;
+    border-color: #ccc;
+    border-radius: 0 ;
+    color: #333333 ;
 }
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #333333;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #333333;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #333333;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #333333;
+}
+.ember-power-select-status-icon{
+     border-color: #333333 transparent transparent transparent;
 
-.ember-power-select-dropdown {
-    background-color: red ;
 }
